IndibaList updated