@@ -8,6 +8,10 @@ import com.tfg.model.patient.PatientFactory;
 import com.tfg.model.physiotherapist.PhysiotherapistFactory;
 import com.tfg.patient.Patient;
 import com.tfg.physiotherapist.Physiotherapist;
+import com.tfg.pojos.pagedpojos.PageQuery;
+import com.tfg.pojos.pagedpojos.PagedResponse;
+import com.tfg.pojos.query.IndibaSummaryElement;
+import com.tfg.pojos.query.PatientSummaryElement;
 import com.tfg.port.in.indiba.GetIndibaSessionFromPatientUseCase;
 import io.restassured.module.mockmvc.RestAssuredMockMvc;
 import org.junit.jupiter.api.BeforeEach;
@@ -16,13 +20,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableHandlerMethodArgumentResolver;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
+import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 
 @ExtendWith(MockitoExtension.class)
@@ -35,24 +45,29 @@ public class GetIndibaSessionFromPatientControllerTest {
     private GetIndibaSessionFromPatientController getIndibaSessionFromPatientController;
 
     private static final Patient TEST_PATIENT = PatientFactory.createTestPatient("hola@gmail.com", "85729487J");
-    private static final Physiotherapist TEST_PHYSIOTHERAPIST = PhysiotherapistFactory.createTestPsychiatrist("hola@gmail.com", "ValidPassword1!");
-    private static final IndibaSession TEST_INDIBA_SESSION_1 = new IndibaSessionFactory().createTestIndibaSession(TEST_PATIENT, TEST_PHYSIOTHERAPIST, new Date(2023, 11, 30), new Date(2023, 12, 15));
-    private static final IndibaSession TEST_INDIBA_SESSION_2 = new IndibaSessionFactory().createTestIndibaSession(TEST_PATIENT, TEST_PHYSIOTHERAPIST, new Date(2023, 12, 16), new Date(2023, 12, 20));
+    private final IndibaSummaryElement TEST_INDIBA_SESSION_1 = new IndibaSummaryElement(1, new Date(2023, Calendar.DECEMBER, 15));
 
     @BeforeEach
     void setUp() {
         RestAssuredMockMvc.standaloneSetup(
                 MockMvcBuilders.standaloneSetup(getIndibaSessionFromPatientController)
+                        .setCustomArgumentResolvers(new PageableHandlerMethodArgumentResolver())
                         .setControllerAdvice(new GlobalExceptionHandler())
         );
     }
 
     @Test
     public void givenValidPatientId_whenGetIndibaSessionsFromPatient_thenReturnsSessions() {
-        given(getIndibaSessionFromPatientUseCase.getIndibaSessionsFromPatient(TEST_PATIENT.getId()))
-                .willReturn(List.of(TEST_INDIBA_SESSION_1, TEST_INDIBA_SESSION_2));
+        PagedResponse<IndibaSummaryElement> pagedResponse = new PagedResponse<>(
+                List.of(TEST_INDIBA_SESSION_1), 1, 1, 0, true
+        );
+
+        given(getIndibaSessionFromPatientUseCase.getIndibaSessionsFromPatient(any(PageQuery.class), eq(TEST_PATIENT.getId())))
+                .willReturn(pagedResponse);
 
         RestAssuredMockMvc.given()
+                .param("page", "0")
+                .param("size", "10")
                 .when()
                 .get("/indiba/{patientId}", String.valueOf(TEST_PATIENT.getId().value()))
                 .then()
@@ -62,10 +77,16 @@ public class GetIndibaSessionFromPatientControllerTest {
 
     @Test
     public void givenValidPatientId_whenGetIndibaSessionsFromPatient_thenReturnsNoContent() {
-        given(getIndibaSessionFromPatientUseCase.getIndibaSessionsFromPatient(TEST_PATIENT.getId()))
-                .willReturn(Collections.emptyList());
+        PagedResponse<IndibaSummaryElement> pagedResponse = new PagedResponse<>(
+                List.of(), 0, 0, 0, true
+        );
+
+        given(getIndibaSessionFromPatientUseCase.getIndibaSessionsFromPatient(any(PageQuery.class), eq(TEST_PATIENT.getId())))
+                .willReturn(pagedResponse);
 
         RestAssuredMockMvc.given()
+                .param("page", "0")
+                .param("size", "10")
                 .when()
                 .get("/indiba/{patientId}", String.valueOf(TEST_PATIENT.getId().value()))
                 .then()
@@ -74,10 +95,12 @@ public class GetIndibaSessionFromPatientControllerTest {
 
     @Test
     public void givenInvalidPatientId_whenGetIndibaSessionsFromPatient_thenReturnsNotFound() {
-        given(getIndibaSessionFromPatientUseCase.getIndibaSessionsFromPatient(TEST_PATIENT.getId()))
+        given(getIndibaSessionFromPatientUseCase.getIndibaSessionsFromPatient(any(PageQuery.class), eq(TEST_PATIENT.getId())))
                 .willThrow(new InvalidIdException());
 
         RestAssuredMockMvc.given()
+                .param("page", "0")
+                .param("size", "10")
                 .when()
                 .get("/indiba/{patientId}", String.valueOf(TEST_PATIENT.getId().value()))
                 .then()
